--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -24,7 +24,7 @@
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Stale Shares</div>
           <app-loading-state *ngIf="isLoading | async" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
-          <h5 *ngIf="(isLoading | async) === false">{{totalStaleShares | async}} ({{totalStaleSharesPercentage | async}}%)</h5>
+          <h5 *ngIf="(isLoading | async) === false" [ngClass]="staleSharesColorClasses | async">{{totalStaleShares | async}} ({{totalStaleSharesPercentage | async}}%)</h5>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
@@ -43,25 +43,25 @@
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Chia Version</div>
-          <h5>{{chiaVersion}}</h5>
+          <h5 [ngClass]="chiaVersionColorClasses">{{chiaVersion}}</h5>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasOgVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">OG Version</div>
-          <h5>{{ogVersion}}</h5>
+          <h5 [ngClass]="ogVersionColorClasses">{{ogVersion}}</h5>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasGigahorseVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Gigahorse Version</div>
-          <h5>{{gigahorseVersion}}</h5>
+          <h5 [ngClass]="gigahorseVersionColorClasses">{{gigahorseVersion}}</h5>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasFoxyFarmerVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Foxy-Farmer Version</div>
-          <h5>{{foxyFarmerVersion}}</h5>
+          <h5 [ngClass]="foxyFarmerVersionColorClasses">{{foxyFarmerVersion}}</h5>
         </div>
       </div>
     </div>
