--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -38,7 +38,7 @@
             </div>
           </ng-template>
           <div
-            class="d-inline-block"
+            class="d-inline-block pt-2"
             style="cursor: pointer"
             [ngbPopover]="badgeContent"
             [autoClose]="'outside'"
