--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,3 +125,13 @@ span[red] {
 .settings-modal .modal-dialog {
   max-width: 700px;
 }
+.farmer-page-link {
+  color: #cfd0d1 !important;
+  text-decoration: none !important;
+  border-bottom: 2px solid transparent;
+  -webkit-transition: border-bottom 0.2s;
+  transition: border-bottom 0.2s;
+}
+.farmer-page-link:hover {
+  border-bottom: 2px solid rgb(66, 134, 244);
+}
