--- a/src/app/loading-state/loading-state.component.html
+++ b/src/app/loading-state/loading-state.component.html
@@ -1,3 +1,3 @@
-<div class="spinner-border text-primary" role="status" [style.width.rem]="width" [style.height.rem]="height" [style.font-size]="fontSize">
+<div class="spinner-border" [ngClass]="colorClass" role="status" [style.width.rem]="width" [style.height.rem]="height" [style.font-size]="fontSize">
   <span class="sr-only">Loading...</span>
 </div>
