--- a/src/app/harvester-card/harvester-card.component.scss
+++ b/src/app/harvester-card/harvester-card.component.scss
@@ -4,3 +4,12 @@
 .shares-chart {
   height: 15rem;
 }
+.dark-background {
+  background-color: #262629;
+  color: #cfd0d1;
+  border-color: #6c757d;
+}
+.btn:focus {
+  outline: none;
+  box-shadow: none;
+}
