--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -89,8 +89,11 @@
       <div class="col-12" *ngIf="hasProofTimes | async">
         <div echarts [options]="proofTimesChartOptions" [merge]="proofTimesChartUpdateOptions" theme="default" class="shares-chart"></div>
       </div>
-      <div class="col-12 text-center mt-3" *ngIf="(hasProofTimes | async) === false">
+      <div class="col-12 text-center mt-3" *ngIf="(hasProofTimes | async) === false && (isLoadingProofTimes | async) === false">
         <app-empty-state text="No proof times recorded in the last 24h" [icon]="faReceipt"></app-empty-state>
+      </div>
+      <div class="col-12 text-center mt-3" *ngIf="isLoadingProofTimes | async">
+        <app-loading-state [height]="3" [width]="3"></app-loading-state>
       </div>
     </div>
   </div>
