--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,7 @@ $color-blue: rgb(66, 134, 244);
 $color-red: rgb(255, 77, 77);
 $color-grey: rgb(140, 140, 140);
 $color-dark-orange: rgb(204, 147, 33);
+$color-green-orange: #b9a44c;
 span[green] {
   background-color: $color-light-green;
 }
@@ -92,6 +93,9 @@ span[red] {
 }
 .color-dark-orange {
   color: $color-dark-orange;
+}
+.color-green-orange {
+  color: $color-green-orange;
 }
 .date-header-container {
   display: flex;
