--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -27,3 +27,7 @@ li {
 .dropdown-item:focus, .dropdown-item:hover {
   background-color: #262629;
 }
+.client-version-chart {
+  height: 25rem;
+  width: 28rem;
+}
